src/objects/Assessment_Question__c.object
<CustomObject>
    <description>ASSESSMENT  - Question for Assessment</description>
    <fields>
        <fullName>Allow_Custom_Question_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Custom Question Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <formula>Question_Domain__r.Assessment_Type__r.Id</formula>
        <label>Assessment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Name__c</fullName>
        <label>Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_States__c</fullName>
        <description>In these states (comma separated). this question is not displayed in the assessment form.</description>
        <label>Excluded States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_MultiSelect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiSelect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Description__c</fullName>
        <description>Description of the Question</description>
        <label>Question Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Domain</label>
        <referenceTo>Assessment_Domain__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Number of the Question</description>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Title__c</fullName>
        <description>Title of the Question</description>
        <label>Question Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextLong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dev_Name__c</columns>
        <columns>Question_Number__c</columns>
        <columns>Question_Description__c</columns>
        <columns>Question_Domain__c</columns>
        <columns>Question_Title__c</columns>
        <columns>Assessment_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CANS</fullName>
        <columns>NAME</columns>
        <columns>Dev_Name__c</columns>
        <columns>Question_Number__c</columns>
        <columns>Question_Description__c</columns>
        <columns>Question_Domain__c</columns>
        <columns>Question_Title__c</columns>
        <columns>Assessment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessment_Type__c</field>
            <operation>equals</operation>
            <value>a0cU0000002RG3n</value>
        </filters>
        <label>CANS</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuestionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>